--- a/src/styles/Event.css
+++ b/src/styles/Event.css
@@ -11,8 +11,21 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'open-sans';
+    src: url('fonts/open-sans/OpenSans-Light.eot');
+    src: url('fonts/open-sans/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/open-sans/OpenSans-Light.woff2') format('woff2'),
+        url('fonts/open-sans/OpenSans-Light.woff') format('woff'),
+        url('fonts/open-sans/OpenSans-Light.ttf') format('truetype'),
+        url('fonts/open-sans/OpenSans-Light.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .Event {
-  background-color: #282c34;
+  background-color: #0D1735;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +33,7 @@
   color: white;
   font-size: 2.5vh;
   text-decoration: none;
+  padding-bottom: 4vh;
 }
 
 h1 {
@@ -27,9 +41,22 @@ h1 {
   font-weight: normal;
   font-style: normal;
   color: #F0C2D1;
+  font-size: 6vh;
 }
 
 p {
+  font-family: 'open-sans';
+  margin-top: 0.1vh;
+  margin-bottom: 0.1vh;
+  font-style: bold;
+}
+
+.Event-title {
+  font-weight: bold;
+}
+
+h5 {
+  font-family: 'open-sans';
   margin-top: 0.1vh;
   margin-bottom: 0.1vh;
 }
