--- a/src/styles/Faq.css
+++ b/src/styles/Faq.css
@@ -11,8 +11,21 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'open-sans';
+    src: url('fonts/open-sans/OpenSans-Light.eot');
+    src: url('fonts/open-sans/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/open-sans/OpenSans-Light.woff2') format('woff2'),
+        url('fonts/open-sans/OpenSans-Light.woff') format('woff'),
+        url('fonts/open-sans/OpenSans-Light.ttf') format('truetype'),
+        url('fonts/open-sans/OpenSans-Light.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .Faq {
-  background-color: #282c34;
+  background-color: #0D1735;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +33,8 @@
   color: white;
   font-size: 2.5vh;
   text-decoration: none;
+  font-size: 2.5vh;
+  padding-bottom: 2vh;
 }
 
 .Faq-text {
@@ -30,5 +45,13 @@ h1 {
   font-family: 'dreamland';
   font-weight: normal;
   font-style: normal;
+  margin-bottom: 3vh;
 }
 
+h3 {
+  font-family: 'open-sans';
+}
+
+p {
+  font-family: 'open-sans';
+}
