--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,6 +1,21 @@
+@font-face {
+    font-family: 'open-sans';
+    src: url('fonts/open-sans/OpenSans-Light.eot');
+    src: url('fonts/open-sans/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/open-sans/OpenSans-Light.woff2') format('woff2'),
+        url('fonts/open-sans/OpenSans-Light.woff') format('woff'),
+        url('fonts/open-sans/OpenSans-Light.ttf') format('truetype'),
+        url('fonts/open-sans/OpenSans-Light.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 .Navigation {
+  font-family: 'open-sans';
   height: 10vh;
-  background-color: #282c34;
+  background-color: #030E2A;
   display: flex;
   flex-direction: row;
   align-items: center;
