--- a/src/styles/Story.css
+++ b/src/styles/Story.css
@@ -13,7 +13,7 @@
 
 .Story {
   min-height: 45vh;
-  background-color: #282c34;
+  background-color: #0D1735;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,10 @@
   color: white;
   font-size: 2.5vh;
   text-decoration: none;
+  font-size: 2.5vh;
+  padding-bottom: 4vh;
+  padding-right: 10vw;
+  padding-left: 10vw;
 }
 
 h1 {
