--- a/src/styles/Travel.css
+++ b/src/styles/Travel.css
@@ -13,7 +13,7 @@
 
 .Travel {
   height: 45vh;
-  background-color: #282c34;
+  background-color: #0D1735;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,6 +29,7 @@
 
 .Lodging-options {
   flex-direction: row;
+  margin-bottom: 5vh;
 }
 
 .Travel-options {
