--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,6 +1,6 @@
 .Content {
   height: 45vh;
-  background-color: #282c34;
+  background-color: #0D1735;
   display: flex;
   flex-direction: row;
   align-items: center;
