--- a/src/styles/Story.css
+++ b/src/styles/Story.css
@@ -11,6 +11,19 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'open-sans';
+    src: url('fonts/open-sans/OpenSans-Light.eot');
+    src: url('fonts/open-sans/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/open-sans/OpenSans-Light.woff2') format('woff2'),
+        url('fonts/open-sans/OpenSans-Light.woff') format('woff'),
+        url('fonts/open-sans/OpenSans-Light.ttf') format('truetype'),
+        url('fonts/open-sans/OpenSans-Light.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .Story {
   min-height: 45vh;
   background-color: #0D1735;
@@ -25,6 +38,7 @@
   padding-bottom: 4vh;
   padding-right: 10vw;
   padding-left: 10vw;
+  padding-bottom: 3vh;
 }
 
 h1 {
@@ -32,9 +46,20 @@ h1 {
   font-weight: normal;
   font-style: normal;
   color: #F0C2D1;
+  margin-bottom: 0vh;
+}
+
+h3 {
+ font-family: 'open-sans';
+ margin-top: 0vh;
+ margin-bottom: 4vh;
 }
 
 p {
   margin-top: 0.1vh;
   margin-bottom: 0.1vh;
+}
+
+.gravity {
+  padding-top: 3vh;
 }
