--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -11,8 +11,8 @@
 }
 
 .Content-photo {
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+  /*-webkit-filter: grayscale(1);*/
+  /*filter: grayscale(1);*/
   max-width: 100%;
   max-height: 100%;
 }
