--- a/src/styles/Travel.css
+++ b/src/styles/Travel.css
@@ -12,7 +12,7 @@
 }
 
 .Travel {
-  height: 45vh;
+  min-height: 45vh;
   background-color: #0D1735;
   display: flex;
   flex-direction: column;
@@ -28,15 +28,15 @@
 }
 
 .Lodging-options {
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 5vh;
 }
 
 .Travel-options {
   flex-direction: row;
-  margin-bottom: 3vh;
+  margin-bottom: 2vh;
 }
-
 
 li {
   list-style-type: none;
@@ -52,6 +52,8 @@ a {
 
 .TravelIcon {
   padding-right: 10vw;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
@@ -61,3 +63,35 @@ h1 {
   color: #F0C2D1;
 }
 
+.Travel-text {
+  width: 75vw;
+  padding-bottom: 5vh;
+}
+
+
+.Lodging-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.Travel-description {
+  width: 33%;
+  font-size: 1.7vh;
+}
+
+.LodgingIcon {
+  align-items: center;
+  justify-content: center;
+}
+
+.Hotel-distance {
+  padding-top: 2vh;
+  font-weight: bold;
+  color: #E88DAB;
+}
+
+.Hotel-code {
+  color: #F0C2D1;
+}
