--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
     font-family: 'dreamland';
     src: url('fonts/dreamland/dreamland.eot');
@@ -10,6 +11,7 @@
     font-style: normal;
     font-display: swap;
 }
+*/
 
 .Header {
   height: 25vh;
