--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
     font-family: 'open-sans';
     src: url('fonts/open-sans/OpenSans-Light.eot');
@@ -10,10 +11,10 @@
     font-style: normal;
     font-display: swap;
 }
-
+*/
 
 .Navigation {
-  font-family: 'open-sans';
+  font-family: 'OpenSans-Light';
   height: 10vh;
   background-color: #030E2A;
   display: flex;
