--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,22 @@
+@font-face {
+    font-family: 'dreamland';
+    src: url('fonts/dreamland/dreamland.woff2') format('woff2');
+    src: url('fonts/dreamland/dreamland.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: 'OpenSans-Light';
+    src: url('fonts/open-sans/OpenSans-Light.woff2') format('woff2');
+    src: url('fonts/open-sans/OpenSans-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+
 body {
   margin: 0;
   font-family: 'dreamland', 'OpenSans-Light', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +27,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'dreamland', 'OpenSans-Light', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
