--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -2,7 +2,7 @@
   height: 45vh;
   background-color: #0D1735;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
@@ -13,12 +13,13 @@
 .Content-photo {
   /*-webkit-filter: grayscale(1);*/
   /*filter: grayscale(1);*/
-  max-width: 100%;
-  max-height: 100%;
+  height: 36vh;
 }
 
-.Story-photo {
-  max-width: 50%;
-  max-height: 50%;
+.Content-timer {
+  font-size: 2vh;
+  font-family: 'OpenSans-Light';
+  padding-top: 3vh;
+  padding-bottom: 3vh;
 }
 
