api connection to ui - functional components + classes

--- a/src/styles/Popup.css
+++ b/src/styles/Popup.css
@@ -100,7 +100,7 @@ label {
 input {
   font-family: 'OpenSans-Light';
   font-size: 1.2em;
-  color: #030E2A;
+  color: #ffffff;
   width: 50%;
   margin-left: 1em;
   background: transparent;
