--- a/src/styles/Faq.css
+++ b/src/styles/Faq.css
@@ -26,6 +26,22 @@
 }
 */
 
+@media screen and (min-width: 800px) {
+ .wrapper {
+  background-color: #0D1735;
+ }
+
+ .Faq {
+   max-width: 50vw;
+   margin: 0 auto;
+ }
+
+ .Faq-text {
+  max-width: 45vw;
+  margin: 0 auto;
+}
+}
+
 .Faq {
   background-color: #0D1735;
   display: flex;
