--- a/src/styles/Invitation.css
+++ b/src/styles/Invitation.css
@@ -25,14 +25,23 @@
 .event-header {
   color: #F0C2D1;
   font-size: 6vh;
+  margin-top: 0vh;
+  margin-bottom: 1vh;
   font-weight: normal;
+}
+
+.event-date {
+	color: #E88DAB;
+	margin-top: 10vh;
+	margin-bottom: 0vh;
+	font-size: 3.5vh;
 }
 
 .event-detail {
   font-family: 'OpenSans-Light';
   color: #FFFFFF;
-  font-size: 2.7vh;
-  font-weight: normal;
+  font-size: 2.3vh;
+  font-weight: lighter;
 }
 
 .event-toggle {
@@ -44,6 +53,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-bottom: 3.5vh;
 }
 
 .event-toggle-name {
@@ -56,6 +66,10 @@
   flex-direction: row;
   justify-content: space-evenly;
   font-size: 2vh;
+}
+
+.ceremony-count {
+	margin-bottom: 5vh;
 }
 
 .event-response > input {
@@ -250,4 +264,8 @@ input {
 	color: #030E2A;
 	background-color: #F0C2D1;
 	font-weight: bold;
+  }
+
+  .Submit-button {
+	margin-bottom: 7vh;
   }
