--- a/src/styles/Travel.css
+++ b/src/styles/Travel.css
@@ -13,6 +13,23 @@
 }
 */
 
+@media screen and (min-width: 800px) {
+  .wrapper {
+   background-color: #0D1735;
+  }
+ 
+  .Travel {
+    max-width: 50vw;
+    margin: 0 auto;
+  }
+ 
+  .Travel-text {
+   max-width: 45vw;
+   margin: 0 auto;
+ }
+ }
+ 
+
 .Travel {
   min-height: 45vh;
   background-color: #0D1735;
