--- a/src/styles/Faq.css
+++ b/src/styles/Faq.css
@@ -77,6 +77,7 @@ p {
 
 .Faq-question {
   margin-bottom: 1vh;
+  color: #E88DAB;
 }
 
 .Faq-answer {
@@ -93,6 +94,10 @@ a {
 
 
 li:hover {
+  color: #61dafb;
+}
+
+.internal-link {
   color: #61dafb;
 }
 
