--- a/src/styles/Invitation.css
+++ b/src/styles/Invitation.css
@@ -154,7 +154,7 @@ input {
 .switch-label:before {
 	content: attr(data-off);
 	right: 11px;
-	color: #aaaaaa;
+	color: #030E2A;
 	text-shadow: 0 1px rgba(255, 255, 255, 0.5);
 }
 .switch-label:after {
